# wooz

./: .gitignore  LICENSE  README.md  box.c  buffer.c  flake.nix  main.c  meson.build  meson_options.txt  output-layout.c
.github/videos/: demo.mov
include/: box.h  buffer.h  grim.h  output-layout.h  wooz.h
protocol/: meson.build
